--- a/profile-nebelfee.html
+++ b/profile-nebelfee.html
@@ -5,6 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Nebelfee - FF14</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .content-wrapper { max-width: 800px; margin: 0 auto; padding-top: 120px; padding-bottom: 80px; }
+        .profile-img { display: block; margin: 20px auto; }
+        p { margin: 10px 0; text-align: center; }
+        
+        /* レイアウト調整 */
+        .music-player { position: fixed; top: 0; left: 0; right: 0; z-index: 1200; }
+        .hamburger { font-size: 24px; background: none; border: none; color: #ffd700; cursor: pointer; padding: 10px; }
+        nav { position: fixed; left: 0; width: 100%; background-color: #333; z-index: 1000; }
+        nav ul { list-style: none; padding: 0; margin: 0; display: flex; justify-content: center; }
+        nav li { margin: 0 15px; }
+        nav a { color: #ffd700; text-decoration: none; transition: all 0.3s ease; }
+        nav a:hover { color: #ff6f61; background-color: rgba(255, 255, 255, 0.2); padding: 5px 10px; border-radius: 5px; }
+
+        @media (min-width: 768px) {
+            .hamburger { display: none; }
+            nav { top: 60px; }
+        }
+
+        @media (max-width: 767px) {
+            .content-wrapper { padding-top: 120px; }
+            .profile-img { max-width: 150px; }
+            p { font-size: 14px; }
+            .music-player { flex-wrap: wrap; gap: 5px; }
+            .music-player button, .nav-btn { padding: 3px 8px; font-size: 12px; }
+            .music-player input[type="range"] { width: 80px; }
+            .music-player p { font-size: 12px; margin: 5px 0; }
+            .hamburger { display: block; position: fixed; top: 60px; left: 10px; z-index: 1100; }
+            nav { display: none; top: 100px; }
+            nav.open { display: block; }
+            nav ul { flex-direction: column; align-items: center; }
+            nav li { margin: 10px 0; }
+            nav a { font-size: 14px; padding: 10px; display: block; }
+        }
+    </style>
 </head>
 <body class="bg-nebelfee">
     <div class="music-player">
@@ -17,37 +52,41 @@
         <input type="range" id="volume" min="0" max="1" step="0.1" value="1" onchange="adjustVolume()">
         <button class="nav-btn" onclick="prevTrack()"><</button>
         <button class="nav-btn" onclick="nextTrack()">></button>
-        <p>再生中: <span id="current-track"></span></p>
+        <p>再生中: <span id="current-track">未選択</span></p>
     </div>
+    <button class="hamburger">☰</button>
     <nav>
-        <a href="index.html">ホーム</a>
-        <a href="profile-nebelfee.html">Nebelfee</a>
-        <a href="profile-schattenfee.html">Schattenfee</a>
-        <a href="story.html">ストーリー</a>
-        <a href="gallery.html">ギャラリー</a>
-        <a href="raid.html">レイド</a>
-        <a href="gear.html">装備</a>
-        <a href="diary.html">プレイ日記</a>
-        <a href="recruit.html">仲間募集</a>
-        <a href="links.html">リンク集</a>
-        <a href="spots.html">スクショスポット</a>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="profile-nebelfee.html">Nebelfee</a></li>
+            <li><a href="profile-schattenfee.html">Schattenfee</a></li>
+            <li><a href="story.html">ストーリー</a></li>
+            <li><a href="gallery.html">ギャラリー</a></li>
+            <li><a href="raid.html">レイド</a></li>
+            <li><a href="gear.html">装備</a></li>
+            <li><a href="diary.html">プレイ日記</a></li>
+            <li><a href="recruit.html">仲間募集</a></li>
+            <li><a href="links.html">リンク集</a></li>
+            <li><a href="spots.html">スクショスポット</a></li>
+        </ul>
     </nav>
-    <h1>Nebelfee</h1>
-    <img src="assets/nebelfee.jpg" alt="Nebelfee" class="profile-img">
-    <p>種族: ララフェル</p>
-    <p>性別: メス</p>
-    <p>関係: 姉</p>
-    <p>ジョブ: ヴァイパー（たまに学者）</p>
-    <p>誕生日: 霧の月5日</p>
-    <p>霧の中を舞う双剣の使い手。レイドで鋭い攻撃を繰り出す。</p>
-    <p>好きなエリア: ラケティカ大森林 - 霧深い森の雰囲気が好き</p>
-    <p>得意なコンテンツ: 高難度レイド - 仲間との連携が楽しい</p>
-    <p>愛用の装備: ミラプリは「ミラージュドレッサー」で保管した霧色のローブ</p>
-    <p>一言コメント: 「霧の向こうに勝利が見えるよ！」</p>
+    <div class="content-wrapper">
+        <h1>Nebelfee</h1>
+        <img src="assets/nebelfee.jpg" alt="Nebelfee" class="profile-img">
+        <p>種族: ララフェル</p>
+        <p>性別: メス</p>
+        <p>関係: 姉</p>
+        <p>ジョブ: ヴァイパー（たまに学者）</p>
+        <p>誕生日: 霧の月5日</p>
+        <p>霧の中を舞う双剣の使い手。レイドで鋭い攻撃を繰り出す。</p>
+        <p>好きなエリア: ラケティカ大森林 - 霧深い森の雰囲気が好き</p>
+        <p>得意なコンテンツ: 高難度レイド - 仲間との連携が楽しい</p>
+        <p>愛用の装備: ミラプリは「ミラージュドレッサー」で保管した霧色のローブ</p>
+        <p>一言コメント: 「霧の向こうに勝利が見えるよ！」</p>
+    </div>
     <footer>
         <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
     </footer>
-    <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const tracks = [
@@ -98,6 +137,13 @@
             window.adjustVolume = function() {
                 bgm.volume = document.getElementById("volume").value;
             };
+
+            // ハンバーガーメニューの制御
+            const hamburger = document.querySelector('.hamburger');
+            const nav = document.querySelector('nav');
+            hamburger.addEventListener('click', () => {
+                nav.classList.toggle('open');
+            });
         });
     </script>
 </body>
