--- a/spots.html
+++ b/spots.html
@@ -6,172 +6,50 @@
     <title>お気に入りの撮影スポット | FF14 冒険者の記録</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* spots.html用の追加CSS */
-        .spot-list {
-            max-width: 800px;
-            margin: 20px auto;
+        .spot-list { max-width: 800px; margin: 20px auto; }
+        .screenshot-spot { background: linear-gradient(135deg, rgba(22, 33, 62, 0.9), rgba(0, 0, 0, 0.9)); box-shadow: 0 0 10px rgba(52, 152, 219, 0.5); padding: 20px; margin: 20px 0; border-radius: 5px; position: relative; overflow: hidden; display: block; }
+        .screenshot-spot h2.spot-title { color: #ff6f61; font-size: 26px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9); margin-bottom: 10px; }
+        .screenshot-spot p { color: #ffffff; font-size: 16px; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); line-height: 1.6; margin: 10px 0; }
+        .screenshot-spot .tips { color: #ccc; font-size: 14px; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); margin-top: 10px; }
+        .screenshot-spot .spot-image { max-width: 100%; height: auto; border: 2px solid #ffd700; border-radius: 5px; transition: transform 0.3s ease, box-shadow 0.3s ease; }
+        .screenshot-spot .spot-image:hover { transform: scale(1.05); box-shadow: 0 0 15px rgba(52, 152, 219, 0.8); }
+        #pagination { margin-top: 20px; display: flex; justify-content: center; align-items: center; gap: 10px; }
+        #pagination button { background-color: #ff6f61; color: white; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease; }
+        #pagination button:disabled { background-color: #ccc; cursor: not-allowed; }
+        #pagination button:hover:not(:disabled) { background-color: #e65a50; }
+        #page-number { font-size: 16px; color: #ffffff; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); }
+        .back-link { display: inline-block; margin: 20px 0; color: #ff6f61; text-decoration: none; padding: 5px 10px; border: 1px solid #ff6f61; border-radius: 5px; transition: all 0.3s ease; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); }
+        .back-link:hover { color: #ffffff; background-color: #ff6f61; }
+        .modal-content { background: rgba(22, 33, 62, 0.9); padding: 20px; border-radius: 5px; max-width: 600px; width: 90%; max-height: 80vh; overflow-y: auto; box-shadow: 0 0 15px rgba(52, 152, 219, 0.5); }
+        .modal-content h2 { color: #ff6f61; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9); margin-bottom: 15px; }
+        .modal-content label { color: #ff6f61; font-weight: bold; margin-top: 10px; display: block; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); }
+        .modal-content input, .modal-content textarea { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px; background-color: rgba(255, 255, 255, 0.9); color: #333; font-size: 16px; margin-top: 5px; }
+        body.bg-spots::after { background: rgba(0, 0, 0, 0.5) !important; }
+        .music-player { position: fixed; top: 0; left: 0; right: 0; z-index: 1200; display: flex; align-items: center; justify-content: center; padding: 10px; background-color: rgba(0, 0, 0, 0.8); border-radius: 5px; color: white; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); }
+        .hamburger { font-size: 24px; background: none; border: none; color: #ffd700; cursor: pointer; padding: 10px; }
+        nav { position: fixed; left: 0; width: 100%; background-color: #333; z-index: 1000; }
+        nav ul { list-style: none; padding: 0; margin: 0; display: flex; justify-content: center; }
+        nav li { margin: 0 15px; }
+        nav a { color: #ffd700; text-decoration: none; transition: all 0.3s ease; }
+        nav a:hover { color: #ff6f61; background-color: rgba(255, 255, 255, 0.2); padding: 5px 10px; border-radius: 5px; }
+        .content-wrapper { padding-top: 120px; }
+
+        @media (min-width: 768px) {
+            .hamburger { display: none; }
+            nav { top: 60px; }
         }
 
-        .screenshot-spot {
-            background: linear-gradient(135deg, rgba(22, 33, 62, 0.9), rgba(0, 0, 0, 0.9));
-            box-shadow: 0 0 10px rgba(52, 152, 219, 0.5);
-            padding: 20px;
-            margin: 20px 0;
-            border-radius: 5px;
-            position: relative;
-            overflow: hidden;
-            display: block;
-        }
-
-        .screenshot-spot h2.spot-title {
-            color: #ff6f61;
-            font-size: 26px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
-            margin-bottom: 10px;
-        }
-
-        .screenshot-spot p {
-            color: #ffffff;
-            font-size: 16px;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-            line-height: 1.6;
-            margin: 10px 0;
-        }
-
-        .screenshot-spot .tips {
-            color: #ccc;
-            font-size: 14px;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-            margin-top: 10px;
-        }
-
-        .screenshot-spot .spot-image {
-            max-width: 100%;
-            height: auto;
-            border: 2px solid #ffd700;
-            border-radius: 5px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .screenshot-spot .spot-image:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 15px rgba(52, 152, 219, 0.8);
-        }
-
-        #pagination {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-        }
-
-        #pagination button {
-            background-color: #ff6f61;
-            color: white;
-            border: none;
-            padding: 8px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        #pagination button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-
-        #pagination button:hover:not(:disabled) {
-            background-color: #e65a50;
-        }
-
-        #page-number {
-            font-size: 16px;
-            color: #ffffff;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-        }
-
-        .back-link {
-            display: inline-block;
-            margin: 20px 0;
-            color: #ff6f61;
-            text-decoration: none;
-            padding: 5px 10px;
-            border: 1px solid #ff6f61;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-        }
-
-        .back-link:hover {
-            color: #ffffff;
-            background-color: #ff6f61;
-        }
-
-        .modal-content {
-            background: rgba(22, 33, 62, 0.9);
-            padding: 20px;
-            border-radius: 5px;
-            max-width: 600px;
-            width: 90%;
-            max-height: 80vh;
-            overflow-y: auto;
-            box-shadow: 0 0 15px rgba(52, 152, 219, 0.5);
-        }
-
-        .modal-content h2 {
-            color: #ff6f61;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
-            margin-bottom: 15px;
-        }
-
-        .modal-content label {
-            color: #ff6f61;
-            font-weight: bold;
-            margin-top: 10px;
-            display: block;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-        }
-
-        .modal-content input, .modal-content textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: rgba(255, 255, 255, 0.9);
-            color: #333;
-            font-size: 16px;
-            margin-top: 5px;
-        }
-
-        body.bg-spots::after {
-            background: rgba(0, 0, 0, 0.5) !important;
-        }
-
-        /* ヘッダーのサイズ統一 */
-        nav {
-            height: 60px; /* index.htmlやgallery.htmlと統一 */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 0;
-        }
-
-        /* music-playerの位置調整 - ヘッダーから少し離す */
-        .music-player {
-            position: fixed;
-            top: 80px; /* ヘッダー(60px) + 隙間(10px) */
-            left: 10px;
-            right: 10px;
-            z-index: 1200;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 10px;
-            background-color: rgba(0, 0, 0, 0.8);
-            border-radius: 5px;
-            color: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+        @media (max-width: 767px) {
+            .hamburger { display: block; position: fixed; top: 60px; left: 10px; z-index: 1100; }
+            nav { display: none; top: 100px; }
+            nav.open { display: block; }
+            nav ul { flex-direction: column; align-items: center; }
+            nav li { margin: 10px 0; }
+            nav a { font-size: 14px; padding: 10px; display: block; }
+            .music-player { flex-wrap: wrap; gap: 5px; padding: 5px; }
+            .music-player button, .nav-btn { padding: 3px 8px; font-size: 12px; }
+            .music-player input[type="range"] { width: 80px; }
+            .music-player p { font-size: 12px; margin: 5px 0; }
         }
     </style>
 </head>
@@ -188,20 +66,22 @@
         <button class="nav-btn" onclick="nextTrack()">></button>
         <p>再生中: <span id="current-track"></span></p>
     </div>
+    <button class="hamburger">☰</button>
     <nav>
-        <a href="index.html">ホーム</a>
-        <a href="profile-nebelfee.html">Nebelfee</a>
-        <a href="profile-schattenfee.html">Schattenfee</a>
-        <a href="story.html">ストーリー</a>
-        <a href="gallery.html">ギャラリー</a>
-        <a href="raid.html">レイド</a>
-        <a href="gear.html">装備</a>
-        <a href="diary.html">プレイ日記</a>
-        <a href="recruit.html">仲間募集</a>
-        <a href="links.html">リンク集</a>
-        <a href="spots.html">スクショスポット</a>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="profile-nebelfee.html">Nebelfee</a></li>
+            <li><a href="profile-schattenfee.html">Schattenfee</a></li>
+            <li><a href="story.html">ストーリー</a></li>
+            <li><a href="gallery.html">ギャラリー</a></li>
+            <li><a href="raid.html">レイド</a></li>
+            <li><a href="gear.html">装備</a></li>
+            <li><a href="diary.html">プレイ日記</a></li>
+            <li><a href="recruit.html">仲間募集</a></li>
+            <li><a href="links.html">リンク集</a></li>
+            <li><a href="spots.html">スクショスポット</a></li>
+        </ul>
     </nav>
-
     <div class="content-wrapper">
         <h1>お気に入りの撮影スポット</h1>
         <p>光の戦士が愛してやまない、エオルゼアの特別な場所たち。</p>
@@ -213,8 +93,6 @@
             <button id="next-btn" onclick="changePage(1)">次の思い出</button>
         </div>
     </div>
-
-    <!-- 管理者モードモーダル -->
     <div id="admin-modal" class="modal" style="display: none;">
         <div class="modal-content">
             <span class="close-btn" onclick="closeAdminModal()">×</span>
@@ -237,8 +115,6 @@
             <div id="admin-spot-list"></div>
         </div>
     </div>
-
-    <!-- 編集モーダル -->
     <div id="edit-modal" class="modal" style="display: none;">
         <div class="modal-content">
             <span class="close-btn" onclick="closeEditModal()">×</span>
@@ -258,7 +134,6 @@
             </form>
         </div>
     </div>
-
     <footer>
         <div class="footer-nav">
             <a href="#" id="footer-prev" class="disabled" onclick="changePage(-1)">前の思い出</a>
@@ -266,7 +141,6 @@
         </div>
         <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
     </footer>
-
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const dbRequest = indexedDB.open("SpotsDB", 1);
@@ -495,7 +369,6 @@
                         document.getElementById('image-preview').style.display = 'none';
                         renderSpots();
                         updateAdminSpotList();
-                        console.log("スポットが追加されました:", newSpot);
                     };
 
                     request.onerror = () => {
@@ -593,7 +466,6 @@
                     renderSpots();
                     updateAdminSpotList();
                     closeEditModal();
-                    console.log("スポットが編集されました:", updatedSpot);
                 };
 
                 request.onerror = () => {
@@ -614,7 +486,6 @@
                         });
                         renderSpots();
                         updateAdminSpotList();
-                        console.log("スポットが削除されました: ID", id);
                     };
 
                     request.onerror = () => {
@@ -683,6 +554,12 @@
                         e.target.style.zIndex = 'auto';
                     }
                 }
+            });
+
+            const hamburger = document.querySelector('.hamburger');
+            const nav = document.querySelector('nav');
+            hamburger.addEventListener('click', () => {
+                nav.classList.toggle('open');
             });
         });
     </script>
