--- a/create-diary.html
+++ b/create-diary.html
@@ -5,6 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>新しい日記を作成 - FF14 冒険者の記録</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .music-player { position: fixed; top: 0; left: 0; right: 0; z-index: 1200; display: flex; align-items: center; justify-content: center; padding: 10px; background-color: rgba(0, 0, 0, 0.8); border-radius: 5px; color: white; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); }
+        .hamburger { font-size: 24px; background: none; border: none; color: #ffd700; cursor: pointer; padding: 10px; }
+        nav { position: fixed; left: 0; width: 100%; background-color: #333; z-index: 1000; }
+        nav ul { list-style: none; padding: 0; margin: 0; display: flex; justify-content: center; }
+        nav li { margin: 0 15px; }
+        nav a { color: #ffd700; text-decoration: none; transition: all 0.3s ease; }
+        nav a:hover { color: #ff6f61; background-color: rgba(255, 255, 255, 0.2); padding: 5px 10px; border-radius: 5px; }
+        .content-wrapper { padding-top: 120px; }
+
+        @media (min-width: 768px) {
+            .hamburger { display: none; }
+            nav { top: 60px; }
+        }
+
+        @media (max-width: 767px) {
+            .hamburger { display: block; position: fixed; top: 60px; left: 10px; z-index: 1100; }
+            nav { display: none; top: 100px; }
+            nav.open { display: block; }
+            nav ul { flex-direction: column; align-items: center; }
+            nav li { margin: 10px 0; }
+            nav a { font-size: 14px; padding: 10px; display: block; }
+            .music-player { flex-wrap: wrap; gap: 5px; padding: 5px; }
+            .music-player button, .nav-btn { padding: 3px 8px; font-size: 12px; }
+            .music-player input[type="range"] { width: 80px; }
+            .music-player p { font-size: 12px; margin: 5px 0; }
+        }
+    </style>
 </head>
 <body class="bg-diary">
     <div class="music-player">
@@ -19,18 +47,21 @@
         <button class="nav-btn" onclick="nextTrack()">></button>
         <p>再生中: <span id="current-track"></span></p>
     </div>
+    <button class="hamburger">☰</button>
     <nav>
-        <a href="index.html">ホーム</a>
-        <a href="profile-nebelfee.html">Nebelfee</a>
-        <a href="profile-schattenfee.html">Schattenfee</a>
-        <a href="story.html">ストーリー</a>
-        <a href="gallery.html">ギャラリー</a>
-        <a href="raid.html">レイド</a>
-        <a href="gear.html">装備</a>
-        <a href="diary.html">プレイ日記</a>
-        <a href="recruit.html">仲間募集</a>
-        <a href="links.html">リンク集</a>
-        <a href="spots.html">スクショスポット</a>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="profile-nebelfee.html">Nebelfee</a></li>
+            <li><a href="profile-schattenfee.html">Schattenfee</a></li>
+            <li><a href="story.html">ストーリー</a></li>
+            <li><a href="gallery.html">ギャラリー</a></li>
+            <li><a href="raid.html">レイド</a></li>
+            <li><a href="gear.html">装備</a></li>
+            <li><a href="diary.html">プレイ日記</a></li>
+            <li><a href="recruit.html">仲間募集</a></li>
+            <li><a href="links.html">リンク集</a></li>
+            <li><a href="spots.html">スクショスポット</a></li>
+        </ul>
     </nav>
     <div class="content-wrapper">
         <h1>新しい日記を作成</h1>
@@ -52,14 +83,51 @@
     <footer>
         <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
     </footer>
-    <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const tracks = [
                 { src: "assets/Flow.mp3", name: "Flow" },
                 { src: "assets/Close in the Distance.mp3", name: "Close in the Distance" }
             ];
-            setupBGM(tracks);
+            const audio = document.getElementById("bgm");
+            const currentTrack = document.getElementById("current-track");
+            let currentIndex = 0;
+
+            function setupBGM() {
+                audio.src = tracks[currentIndex].src;
+                currentTrack.textContent = tracks[currentIndex].name;
+                audio.load();
+            }
+
+            function startBGM() {
+                audio.play().catch(err => console.error("再生エラー:", err));
+            }
+
+            function toggleBGM() {
+                if (audio.paused) {
+                    audio.play().catch(err => console.error("再生エラー:", err));
+                } else {
+                    audio.pause();
+                }
+            }
+
+            function adjustVolume() {
+                audio.volume = document.getElementById("volume").value;
+            }
+
+            function prevTrack() {
+                currentIndex = (currentIndex - 1 + tracks.length) % tracks.length;
+                setupBGM();
+                startBGM();
+            }
+
+            function nextTrack() {
+                currentIndex = (currentIndex + 1) % tracks.length;
+                setupBGM();
+                startBGM();
+            }
+
+            setupBGM();
 
             if (localStorage.getItem("isAdmin") !== "true") {
                 alert("管理者権限が必要です。");
@@ -82,7 +150,6 @@
 
             request.onsuccess = (event) => {
                 db = event.target.result;
-                console.log("IndexedDB 接続成功");
             };
 
             request.onerror = (event) => {
@@ -102,7 +169,7 @@
                     if (imageInput.files && imageInput.files[0]) {
                         const reader = new FileReader();
                         reader.onload = (event) => {
-                            diaryData.image = event.target.result; // Base64形式で画像を保存
+                            diaryData.image = event.target.result;
                             saveDiary(diaryData);
                         };
                         reader.readAsDataURL(imageInput.files[0]);
@@ -122,6 +189,12 @@
                     window.location.href = "diary.html";
                 };
             }
+
+            const hamburger = document.querySelector('.hamburger');
+            const nav = document.querySelector('nav');
+            hamburger.addEventListener('click', () => {
+                nav.classList.toggle('open');
+            });
         });
     </script>
 </body>
