--- a/diary-view.html
+++ b/diary-view.html
@@ -2,52 +2,124 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>プレイ日記</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            background-color: #1a1a2e;
-            color: white;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            text-align: center;
-        }
-        .content-wrapper {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        }
+        body { background-color: #1a1a2e; color: white; font-family: Arial, sans-serif; margin: 0; padding: 20px; text-align: center; }
+        .content-wrapper { max-width: 800px; margin: 0 auto; background-color: rgba(0, 0, 0, 0.8); padding: 20px; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
         h1 { color: #ff6f61; font-size: 36px; }
         h2 { color: #ff6f61; }
         .diary-content { white-space: pre-wrap; line-height: 1.6; }
         .diary-image { max-width: 100%; height: auto; border-radius: 5px; }
-        .back-link {
-            display: inline-block;
-            margin-top: 20px;
-            color: #ff6f61;
-            text-decoration: none;
-            padding: 5px 10px;
-            border: 1px solid #ff6f61;
-            border-radius: 5px;
-            transition: all 0.3s ease;
+        .back-link { display: inline-block; margin-top: 20px; color: #ff6f61; text-decoration: none; padding: 5px 10px; border: 1px solid #ff6f61; border-radius: 5px; transition: all 0.3s ease; }
+        .back-link:hover { color: #ffffff; background-color: #ff6f61; }
+        .music-player { position: fixed; top: 0; left: 0; right: 0; z-index: 1200; display: flex; align-items: center; justify-content: center; padding: 10px; background-color: rgba(0, 0, 0, 0.8); border-radius: 5px; color: white; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); }
+        .hamburger { font-size: 24px; background: none; border: none; color: #ffd700; cursor: pointer; padding: 10px; }
+        nav { position: fixed; left: 0; width: 100%; background-color: #333; z-index: 1000; }
+        nav ul { list-style: none; padding: 0; margin: 0; display: flex; justify-content: center; }
+        nav li { margin: 0 15px; }
+        nav a { color: #ffd700; text-decoration: none; transition: all 0.3s ease; }
+        nav a:hover { color: #ff6f61; background-color: rgba(255, 255, 255, 0.2); padding: 5px 10px; border-radius: 5px; }
+        .content-wrapper { padding-top: 120px; }
+
+        @media (min-width: 768px) {
+            .hamburger { display: none; }
+            nav { top: 60px; }
         }
-        .back-link:hover {
-            color: #ffffff;
-            background-color: #ff6f61;
+
+        @media (max-width: 767px) {
+            .hamburger { display: block; position: fixed; top: 60px; left: 10px; z-index: 1100; }
+            nav { display: none; top: 100px; }
+            nav.open { display: block; }
+            nav ul { flex-direction: column; align-items: center; }
+            nav li { margin: 10px 0; }
+            nav a { font-size: 14px; padding: 10px; display: block; }
+            .music-player { flex-wrap: wrap; gap: 5px; padding: 5px; }
+            .music-player button, .nav-btn { padding: 3px 8px; font-size: 12px; }
+            .music-player input[type="range"] { width: 80px; }
+            .music-player p { font-size: 12px; margin: 5px 0; }
         }
     </style>
 </head>
 <body class="bg-diary">
+    <div class="music-player">
+        <audio id="bgm">
+            <source id="bgm-source" src="" type="audio/mpeg">
+            お使いのブラウザは音楽に対応していません。
+        </audio>
+        <button onclick="startBGM()">再生開始</button>
+        <button onclick="toggleBGM()">再生/停止</button>
+        <input type="range" id="volume" min="0" max="1" step="0.1" value="1" onchange="adjustVolume()">
+        <button class="nav-btn" onclick="prevTrack()"><</button>
+        <button class="nav-btn" onclick="nextTrack()">></button>
+        <p>再生中: <span id="current-track"></span></p>
+    </div>
+    <button class="hamburger">☰</button>
+    <nav>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="profile-nebelfee.html">Nebelfee</a></li>
+            <li><a href="profile-schattenfee.html">Schattenfee</a></li>
+            <li><a href="story.html">ストーリー</a></li>
+            <li><a href="gallery.html">ギャラリー</a></li>
+            <li><a href="raid.html">レイド</a></li>
+            <li><a href="gear.html">装備</a></li>
+            <li><a href="diary.html">プレイ日記</a></li>
+            <li><a href="recruit.html">仲間募集</a></li>
+            <li><a href="links.html">リンク集</a></li>
+            <li><a href="spots.html">スクショスポット</a></li>
+        </ul>
+    </nav>
     <div class="content-wrapper" id="diary-content">
         <p>読み込み中...</p>
     </div>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+            const tracks = [
+                { src: "assets/Flow.mp3", name: "Flow" },
+                { src: "assets/Close in the Distance.mp3", name: "Close in the Distance" }
+            ];
+            const audio = document.getElementById("bgm");
+            const currentTrack = document.getElementById("current-track");
+            let currentIndex = 0;
+
+            function setupBGM() {
+                audio.src = tracks[currentIndex].src;
+                currentTrack.textContent = tracks[currentIndex].name;
+                audio.load();
+            }
+
+            function startBGM() {
+                audio.play().catch(err => console.error("再生エラー:", err));
+            }
+
+            function toggleBGM() {
+                if (audio.paused) {
+                    audio.play().catch(err => console.error("再生エラー:", err));
+                } else {
+                    audio.pause();
+                }
+            }
+
+            function adjustVolume() {
+                audio.volume = document.getElementById("volume").value;
+            }
+
+            function prevTrack() {
+                currentIndex = (currentIndex - 1 + tracks.length) % tracks.length;
+                setupBGM();
+                startBGM();
+            }
+
+            function nextTrack() {
+                currentIndex = (currentIndex + 1) % tracks.length;
+                setupBGM();
+                startBGM();
+            }
+
+            setupBGM();
+
             const urlParams = new URLSearchParams(window.location.search);
             const diaryId = urlParams.get("id");
             const token = urlParams.get("token");
@@ -96,6 +168,12 @@
                     console.error("日記取得エラー:", request.error);
                 };
             }
+
+            const hamburger = document.querySelector('.hamburger');
+            const nav = document.querySelector('nav');
+            hamburger.addEventListener('click', () => {
+                nav.classList.toggle('open');
+            });
         });
     </script>
 </body>
