--- a/gallery.html
+++ b/gallery.html
@@ -6,127 +6,48 @@
     <title>ギャラリー</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* gallery.html用のインラインCSS */
-        .slideshow {
-            position: relative;
-            max-width: 800px;
-            width: 100%;
-            height: 600px;
-            margin: 20px auto;
-            overflow: hidden;
-            background-color: rgba(0, 0, 0, 0.2);
+        .slideshow { position: relative; max-width: 800px; width: 100%; height: 600px; margin: 20px auto; overflow: hidden; background-color: rgba(0, 0, 0, 0.2); }
+        .slide { width: 100%; height: 100%; object-fit: contain; position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 0.5s ease; z-index: 2; }
+        .slide.active { opacity: 1; }
+        .gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin: 20px 0; }
+        .gallery-item { text-align: center; position: relative; }
+        .gallery-item img { width: 400px; height: auto; object-fit: cover; border-radius: 5px; }
+        .gallery-item p { margin: 5px 0; font-size: 16px; }
+        #admin-mode { display: none; margin: 20px auto; text-align: center; background: #f0f0f0; padding: 20px; border-radius: 5px; }
+        #preview-image { max-width: 200px; height: auto; margin-top: 10px; }
+        footer { height: 60px; display: flex; flex-direction: column; justify-content: center; padding: 0; text-align: center; font-size: 12px; }
+        footer p { color: #ffffff; margin: 0; }
+        .music-player { position: fixed; top: 0; left: 0; right: 0; z-index: 1200; display: flex; align-items: center; justify-content: center; padding: 10px; background-color: rgba(0, 0, 0, 0.8); border-radius: 5px; color: white; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); }
+        #admin-command { width: 50px; border: none; background: transparent; color: rgba(255, 255, 255, 0.3); font-size: 10px; outline: none; }
+        #admin-command::placeholder { color: rgba(255, 255, 255, 0.3); }
+        .admin-controls { display: none; margin-top: 10px; }
+        .gallery-item[data-public="false"]:not(.admin-view), .slide[data-public="false"]:not(.admin-view) { display: none; }
+        .admin-controls select, .admin-controls button { margin: 5px; }
+        .edit-input { display: none; margin: 5px; width: 80%; }
+        .hamburger { font-size: 24px; background: none; border: none; color: #ffd700; cursor: pointer; padding: 10px; }
+        nav { position: fixed; left: 0; width: 100%; background-color: #333; z-index: 1000; }
+        nav ul { list-style: none; padding: 0; margin: 0; display: flex; justify-content: center; }
+        nav li { margin: 0 15px; }
+        nav a { color: #ffd700; text-decoration: none; transition: all 0.3s ease; }
+        nav a:hover { color: #ff6f61; background-color: rgba(255, 255, 255, 0.2); padding: 5px 10px; border-radius: 5px; }
+        .content-wrapper { padding-top: 120px; }
+
+        @media (min-width: 768px) {
+            .hamburger { display: none; }
+            nav { top: 60px; }
         }
-        .slide {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            position: absolute;
-            top: 0;
-            left: 0;
-            opacity: 0;
-            transition: opacity 0.5s ease;
-            z-index: 2;
-        }
-        .slide.active {
-            opacity: 1;
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-        .gallery-item {
-            text-align: center;
-            position: relative;
-        }
-        .gallery-item img {
-            width: 400px;
-            height: auto;
-            object-fit: cover;
-            border-radius: 5px;
-        }
-        .gallery-item p {
-            margin: 5px 0;
-            font-size: 16px;
-        }
-        #admin-mode {
-            display: none;
-            margin: 20px auto;
-            text-align: center;
-            background: #f0f0f0;
-            padding: 20px;
-            border-radius: 5px;
-        }
-        #preview-image {
-            max-width: 200px;
-            height: auto;
-            margin-top: 10px;
-        }
-        /* ヘッダーとフッターのサイズ統一 */
-        nav {
-            height: 60px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 0;
-        }
-        footer {
-            height: 60px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            padding: 0;
-            text-align: center;
-            font-size: 12px;
-        }
-        footer p {
-            color: #ffffff; /* 著作権マークを白に */
-            margin: 0;
-        }
-        /* music-playerの位置調整 - ヘッダーから少し離す */
-        .music-player {
-            position: fixed;
-            top: 80px; /* ヘッダー(60px) + 隙間(10px) */
-            left: 10px;
-            right: 10px;
-            z-index: 1200;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 10px;
-            background-color: rgba(0, 0, 0, 0.8);
-            border-radius: 5px;
-            color: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-        }
-        #admin-command {
-            width: 50px;
-            border: none;
-            background: transparent;
-            color: rgba(255, 255, 255, 0.3); /* 薄い白で目立たなく */
-            font-size: 10px;
-            outline: none;
-        }
-        #admin-command::placeholder {
-            color: rgba(255, 255, 255, 0.3); /* プレースホルダーも薄く */
-        }
-        .admin-controls {
-            display: none;
-            margin-top: 10px;
-        }
-        .gallery-item[data-public="false"]:not(.admin-view),
-        .slide[data-public="false"]:not(.admin-view) {
-            display: none;
-        }
-        .admin-controls select, .admin-controls button {
-            margin: 5px;
-        }
-        .edit-input {
-            display: none;
-            margin: 5px;
-            width: 80%;
+
+        @media (max-width: 767px) {
+            .hamburger { display: block; position: fixed; top: 60px; left: 10px; z-index: 1100; }
+            nav { display: none; top: 100px; }
+            nav.open { display: block; }
+            nav ul { flex-direction: column; align-items: center; }
+            nav li { margin: 10px 0; }
+            nav a { font-size: 14px; padding: 10px; display: block; }
+            .music-player { flex-wrap: wrap; gap: 5px; padding: 5px; }
+            .music-player button, .nav-btn { padding: 3px 8px; font-size: 12px; }
+            .music-player input[type="range"] { width: 80px; }
+            .music-player p { font-size: 12px; margin: 5px 0; }
         }
     </style>
 </head>
@@ -143,27 +64,24 @@
         <button class="nav-btn" onclick="nextTrack()">></button>
         <p>再生中: <span id="current-track"></span></p>
     </div>
-
+    <button class="hamburger">☰</button>
     <nav>
-        <a href="index.html">ホーム</a>
-        <a href="profile-nebelfee.html">Nebelfee</a>
-        <a href="profile-schattenfee.html">Schattenfee</a>
-        <a href="story.html">ストーリー</a>
-        <a href="gallery.html">ギャラリー</a>
-        <a href="raid.html">レイド</a>
-        <a href="gear.html">装備</a>
-        <a href="diary.html">プレイ日記</a>
-        <a href="recruit.html">仲間募集</a>
-        <a href="links.html">リンク集</a>
-        <a href="spots.html">スクショスポット</a>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="profile-nebelfee.html">Nebelfee</a></li>
+            <li><a href="profile-schattenfee.html">Schattenfee</a></li>
+            <li><a href="story.html">ストーリー</a></li>
+            <li><a href="gallery.html">ギャラリー</a></li>
+            <li><a href="raid.html">レイド</a></li>
+            <li><a href="gear.html">装備</a></li>
+            <li><a href="diary.html">プレイ日記</a></li>
+            <li><a href="recruit.html">仲間募集</a></li>
+            <li><a href="links.html">リンク集</a></li>
+            <li><a href="spots.html">スクショスポット</a></li>
+        </ul>
     </nav>
-
     <div class="content-wrapper">
-        <div class="slideshow" id="slideshow">
-            <!-- 初期アイテムなし -->
-        </div>
-
-        <!-- 管理者モード -->
+        <div class="slideshow" id="slideshow"></div>
         <div id="admin-mode">
             <h2>管理者モード</h2>
             <div>
@@ -173,17 +91,12 @@
                 <img id="preview-image" src="" alt="プレビュー" style="display: none;">
             </div>
         </div>
-
         <h1>冒険の記録</h1>
-        <div class="gallery" id="gallery">
-            <!-- 初期アイテムなし -->
-        </div>
+        <div class="gallery" id="gallery"></div>
     </div>
-
     <footer>
-        <p>© SQUARE ENIX CO., LTD. All Rights Reserved. | <input type="text" id="admin-command" placeholder="..." oninput="checkAdminCommand()"></p>
+        <p>© SQUARE ENIX CO., LTD. All Rights Reserved. | <input type="text" id="admin-command" placeholder="..."></p>
     </footer>
-
     <script>
         let isAdmin = false;
         let nextId = 1;
@@ -244,8 +157,15 @@
                     previewImage.style.display = "none";
                 }
             });
+
+            const hamburger = document.querySelector('.hamburger');
+            const nav = document.querySelector('nav');
+            hamburger.addEventListener('click', () => {
+                nav.classList.toggle('open');
+            });
         });
 
+        // 以下、既存のスクリプトはそのまま
         function checkAdminCommand() {
             const command = document.getElementById("admin-command").value.toLowerCase();
             const adminMode = document.getElementById("admin-mode");
