--- a/story.html
+++ b/story.html
@@ -5,6 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ストーリー - FF14</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .content-wrapper { max-width: 800px; margin: 0 auto; padding-top: 120px; padding-bottom: 80px; }
+        .story { margin: 20px 0; }
+        
+        /* レイアウト調整 */
+        .music-player { position: fixed; top: 0; left: 0; right: 0; z-index: 1200; }
+        .hamburger { font-size: 24px; background: none; border: none; color: #ffd700; cursor: pointer; padding: 10px; }
+        nav { position: fixed; left: 0; width: 100%; background-color: #333; z-index: 1000; }
+        nav ul { list-style: none; padding: 0; margin: 0; display: flex; justify-content: center; }
+        nav li { margin: 0 15px; }
+        nav a { color: #ffd700; text-decoration: none; transition: all 0.3s ease; }
+        nav a:hover { color: #ff6f61; background-color: rgba(255, 255, 255, 0.2); padding: 5px 10px; border-radius: 5px; }
+
+        @media (min-width: 768px) {
+            .hamburger { display: none; }
+            nav { top: 60px; }
+        }
+
+        @media (max-width: 767px) {
+            .content-wrapper { padding-top: 120px; }
+            .story h2 { font-size: 18px; }
+            .story p { font-size: 14px; }
+            .music-player { flex-wrap: wrap; gap: 5px; }
+            .music-player button, .nav-btn { padding: 3px 8px; font-size: 12px; }
+            .music-player input[type="range"] { width: 80px; }
+            .music-player p { font-size: 12px; margin: 5px 0; }
+            .hamburger { display: block; position: fixed; top: 60px; left: 10px; z-index: 1100; }
+            nav { display: none; top: 100px; }
+            nav.open { display: block; }
+            nav ul { flex-direction: column; align-items: center; }
+            nav li { margin: 10px 0; }
+            nav a { font-size: 14px; padding: 10px; display: block; }
+        }
+    </style>
 </head>
 <body class="bg-story">
     <div class="music-player">
@@ -17,58 +51,63 @@
         <input type="range" id="volume" min="0" max="1" step="0.1" value="1" onchange="adjustVolume()">
         <button class="nav-btn" onclick="prevTrack()"><</button>
         <button class="nav-btn" onclick="nextTrack()">></button>
-        <p>再生中: <span id="current-track"></span></p>
+        <p>再生中: <span id="current-track">未選択</span></p>
     </div>
+    <button class="hamburger">☰</button>
     <nav>
-        <a href="index.html">ホーム</a>
-        <a href="profile-nebelfee.html">Nebelfee</a>
-        <a href="profile-schattenfee.html">Schattenfee</a>
-        <a href="story.html">ストーリー</a>
-        <a href="gallery.html">ギャラリー</a>
-        <a href="raid.html">レイド</a>
-        <a href="gear.html">装備</a>
-        <a href="diary.html">プレイ日記</a>
-        <a href="recruit.html">仲間募集</a>
-        <a href="links.html">リンク集</a>
-        <a href="spots.html">スクショスポット</a>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="profile-nebelfee.html">Nebelfee</a></li>
+            <li><a href="profile-schattenfee.html">Schattenfee</a></li>
+            <li><a href="story.html">ストーリー</a></li>
+            <li><a href="gallery.html">ギャラリー</a></li>
+            <li><a href="raid.html">レイド</a></li>
+            <li><a href="gear.html">装備</a></li>
+            <li><a href="diary.html">プレイ日記</a></li>
+            <li><a href="recruit.html">仲間募集</a></li>
+            <li><a href="links.html">リンク集</a></li>
+            <li><a href="spots.html">スクショスポット</a></li>
+        </ul>
     </nav>
-    <h1>二人の物語</h1>
-    <p class="disclaimer">※これは、既存をリスペクトしたオリジナルのストーリーです。</p>
-    <section class="story starfall origin-effect">
-        <h2><a href="story-origin.html">第零章: NebelfeeとSchattenfeeの出生</a></h2>
-        <p>霧と影に宿る運命の胎動。</p>
-        <p>あらすじ: 霧と影に生まれし姉弟、NebelfeeとSchattenfeeは、グリダニアの深奥で運命に導かれ、エオルゼアの危機に立ち向かうための力を育む。</p>
-    </section>
-    <section class="story starfall arr-effect">
-        <h2><a href="story-a-realm-reborn.html">新生エオルゼア</a></h2>
-        <p>新たなる大地に響き合う魂。</p>
-        <p>あらすじ: 霧と影、二つの魂がエオルゼアの大地を駆け抜け、蛮神の咆哮とクリスタルタワーの封印に挑む。仲間と共に帝国の野望を砕き、アルテマウェポンの脅威に立ち向かう旅が、ここに始まる。</p>
-    </section>
-    <section class="story starfall hw-effect">
-        <h2><a href="story-heavensward.html">蒼天のイシュガルド</a></h2>
-        <p>蒼空に舞う霧と影の刃。</p>
-        <p>あらすじ: 竜と人の抗争の中、NebelfeeとSchattenfeeはイシュガルドでニーズヘッグや教皇の野望に挑み、フォルタン家、天騎士団、暁の仲間と共に蒼天の真実を求める。アレキサンダーの鼓動が響き、聖騎士の誓いが試される旅が始まる。</p>
-    </section>
-    <section class="story starfall sb-effect">
-        <h2><a href="story-stormblood.html">紅蓮の解放者</a></h2>
-        <p>紅蓮の炎に燃える霧と影の絆。</p>
-        <p>あらすじ: NebelfeeとSchattenfeeはドマとアラミゴを巡り、帝国の圧政と蛮神の脅威に挑む。ヒエンやユウギリ、暁の仲間と共にゼノスと神龍を倒し、オメガの試練を乗り越え、紅蓮の自由を勝ち取る旅が始まる。</p>
-    </section>
-    <section class="story starfall shb-effect">
-        <h2><a href="story-shadowbringers.html">漆黒のヴィランズ</a></h2>
-        <p>漆黒の夜を貫く霧と影の光。</p>
-        <p>あらすじ: 第一世界でNebelfeeとSchattenfeeは水晶公と共にクリスタリウムを拠点に光の罪喰い・エデンとハーデスに挑み、リーンや暁の仲間と夜を取り戻す旅を続ける。</p>
-    </section>
-    <section class="story starfall ew-effect">
-        <h2><a href="story-endwalker.html">暁月の終焉</a></h2>
-        <p>星海に響く霧と影の終幕。</p>
-        <p>あらすじ: NebelfeeとSchattenfeeはラヴィリンソスと星泪の海を巡り、メーティオンと終末に挑み、パンデモニウムの謎を解きながら暁月の希望を求める。</p>
-    </section>
-    <section class="story starfall dt-effect">
-        <h2><a href="story-dawntrail.html">黄金のレガシー</a></h2>
-        <p>黄金の大地に刻む霧と影の誓い。</p>
-        <p>あらすじ: NebelfeeとSchattenfeeはトライヨラと黄金を巡り、ウクラマトと共にアルカディアの試練とソリューション・ナインの謎を解き、ゾラージャとエターナルクイーンに挑み、新大陸の未来を求める。</p>
-    </section>
+    <div class="content-wrapper">
+        <h1>二人の物語</h1>
+        <p class="disclaimer">※これは、既存をリスペクトしたオリジナルのストーリーです。</p>
+        <section class="story starfall origin-effect">
+            <h2><a href="story-origin.html">第零章: NebelfeeとSchattenfeeの出生</a></h2>
+            <p>霧と影に宿る運命の胎動。</p>
+            <p>あらすじ: 霧と影に生まれし姉弟、NebelfeeとSchattenfeeは、グリダニアの深奥で運命に導かれ、エオルゼアの危機に立ち向かうための力を育む。</p>
+        </section>
+        <section class="story starfall arr-effect">
+            <h2><a href="story-a-realm-reborn.html">新生エオルゼア</a></h2>
+            <p>新たなる大地に響き合う魂。</p>
+            <p>あらすじ: 霧と影、二つの魂がエオルゼアの大地を駆け抜け、蛮神の咆哮とクリスタルタワーの封印に挑む。仲間と共に帝国の野望を砕き、アルテマウェポンの脅威に立ち向かう旅が、ここに始まる。</p>
+        </section>
+        <section class="story starfall hw-effect">
+            <h2><a href="story-heavensward.html">蒼天のイシュガルド</a></h2>
+            <p>蒼空に舞う霧と影の刃。</p>
+            <p>あらすじ: 竜と人の抗争の中、NebelfeeとSchattenfeeはイシュガルドでニーズヘッグや教皇の野望に挑み、フォルタン家、天騎士団、暁の仲間と共に蒼天の真実を求める。アレキサンダーの鼓動が響き、聖騎士の誓いが試される旅が始まる。</p>
+        </section>
+        <section class="story starfall sb-effect">
+            <h2><a href="story-stormblood.html">紅蓮の解放者</a></h2>
+            <p>紅蓮の炎に燃える霧と影の絆。</p>
+            <p>あらすじ: NebelfeeとSchattenfeeはドマとアラミゴを巡り、帝国の圧政と蛮神の脅威に挑む。ヒエンやユウギリ、暁の仲間と共にゼノスと神龍を倒し、オメガの試練を乗り越え、紅蓮の自由を勝ち取る旅が始まる。</p>
+        </section>
+        <section class="story starfall shb-effect">
+            <h2><a href="story-shadowbringers.html">漆黒のヴィランズ</a></h2>
+            <p>漆黒の夜を貫く霧と影の光。</p>
+            <p>あらすじ: 第一世界でNebelfeeとSchattenfeeは水晶公と共にクリスタリウムを拠点に光の罪喰い・エデンとハーデスに挑み、リーンや暁の仲間と夜を取り戻す旅を続ける。</p>
+        </section>
+        <section class="story starfall ew-effect">
+            <h2><a href="story-endwalker.html">暁月の終焉</a></h2>
+            <p>星海に響く霧と影の終幕。</p>
+            <p>あらすじ: NebelfeeとSchattenfeeはラヴィリンソスと星泪の海を巡り、メーティオンと終末に挑み、パンデモニウムの謎を解きながら暁月の希望を求める。</p>
+        </section>
+        <section class="story starfall dt-effect">
+            <h2><a href="story-dawntrail.html">黄金のレガシー</a></h2>
+            <p>黄金の大地に刻む霧と影の誓い。</p>
+            <p>あらすじ: NebelfeeとSchattenfeeはトライヨラと黄金を巡り、ウクラマトと共にアルカディアの試練とソリューション・ナインの謎を解き、ゾラージャとエターナルクイーンに挑み、新大陸の未来を求める。</p>
+        </section>
+    </div>
     <footer>
         <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
     </footer>
@@ -122,6 +161,13 @@
             window.adjustVolume = function() {
                 bgm.volume = document.getElementById("volume").value;
             };
+
+            // ハンバーガーメニューの制御
+            const hamburger = document.querySelector('.hamburger');
+            const nav = document.querySelector('nav');
+            hamburger.addEventListener('click', () => {
+                nav.classList.toggle('open');
+            });
         });
     </script>
 </body>
